--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Bogdau Bau GmbH" />
+  <meta property="og:description" content="IHR BAUPARTNER" />
+  <meta property="og:image" content="" />
+  <meta property="og:type" content="website" />
+
 
 </head>
 
