--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <title>Bogdan Bau GmbH</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
   <meta property="og:title" content="Bogdau Bau GmbH" />
   <meta property="og:description" content="IHR BAUPARTNER" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="./src/assets/logo/logo-white.png" />
   <meta property="og:type" content="website" />
 
 
