--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bogdan Bau GmbH</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-  <meta property="og:title" content="Bogdau Bau GmbH" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
+  <meta property="og:title" content="Bogdan Bau GmbH" />
   <meta property="og:description" content="IHR BAUPARTNER" />
-  <meta property="og:image" content="./src/assets/logo/logo-white.png" />
+  <meta property="og:image" content="/logo-white.png" />
   <meta property="og:type" content="website" />
-
-
 </head>
 
 <body>
